[gd_scene load_steps=4 format=3 uid="uid://doj5xhu0enwhh"]

[ext_resource type="Script" path="res://Inventory/letter_viewer.gd" id="1_6w8bb"]
[ext_resource type="Texture2D" uid="uid://clt8fxaique26" path="res://Images/slot.png" id="1_beo6u"]
[ext_resource type="FontFile" uid="uid://dccxpf6sn8s45" path="res://Fonts/American Typewriter Regular.ttf" id="3_pkfxe"]

[node name="Letter_Viewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6w8bb")

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_vertical = 2
text = "<-----"

[node name="Foward" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
text = "----->"

[node name="LetterIMG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1125.0
offset_top = -750.0
offset_right = 1125.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_beo6u")
expand_mode = 3

[node name="LetterBody" type="RichTextLabel" parent="LetterIMG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -500.0
offset_right = 750.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pkfxe")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 80
theme_override_font_sizes/italics_font_size = 100
bbcode_enabled = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Foward" to="." method="_on_foward_pressed"]
